# fastiapi2

./: .gitignore  .python-semantic-release.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tasks.db
.github/workflows/: docker-build.yml  test-token.yml
app/: database.py  init_db.py  main.py
app/auth/: auth.py
app/models/: task.py
app/routers/: tasks.py  utils.py
